--- a/views/home.html
+++ b/views/home.html
@@ -21,6 +21,8 @@
                 <form action=""><input type="texto">
                     <botoon><i class="fas fa-search"></i>
                     </botoon>
+                </form>
+
             </div>
 
             <p><i class="fas fa-hand-holding-usd"></i>
@@ -43,8 +45,8 @@
         </nav>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
-            </div>
-            
+        </div>
+
     </header>
     <main>
         <section>
@@ -111,30 +113,28 @@
     </main>
     <footer>
         <section>
-            <article> 
+            <article>
                 <i class="fas fa-credit-card"></i>
-            <h4>Pagá con tarjeta o en efectivo</h4>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
+                <h4>Pagá con tarjeta o en efectivo</h4>
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
             </article>
-            <article> 
+            <article>
                 <i class="fas fa-gift"></i>
-            <h4>Envío gratis desde $ 2.500 </h4>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
+                <h4>Envío gratis desde $ 2.500 </h4>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
             </article>
-            <article> 
+            <article>
                 <i class="fas fa-user-shield"></i>
-            <h4>Seguridad, de principio a fin </h4>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p> 
+                <h4>Seguridad, de principio a fin </h4>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
             </article>
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L. </p>
 
         </section>
     </footer>
 </body>
-
-</nav>
 
 </html>
